plugins {
    java
    `maven-publish`
    application
    alias(libs.plugins.shadow)
}

group = "net.theevilreaper"
version = "0.6.0" // x-release-please-version
description = "Bounce"

dependencies {
    implementation(project(":common"))
    implementation(platform(libs.aonyx.bom))
    implementation(platform(libs.cloudnet.bom))
    implementation(platform(libs.falco.bom))
    implementation(project(":block"))
    implementation(libs.adventure)
    implementation(libs.falco.anvil)
    implementation(libs.pvp)
    implementation(libs.minestom)
    implementation(libs.aves)
    implementation(libs.bundles.cloudnet)
    implementation(libs.slf4j.api)
    implementation(libs.xerus)

    testImplementation(libs.minestom)
    testImplementation(libs.aves)
    testImplementation(libs.cyano)
    testImplementation(libs.junit.api)
    testImplementation(libs.junit.params)
    testImplementation(libs.junit.platform.launcher)
    testRuntimeOnly(libs.junit.engine)
}

application {
    mainClass.set("net.theevilreaper.bounce.BounceServer")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

tasks {
    jar {
        dependsOn("shadowJar")
    }

    test {
        jvmArgs("-Dminestom.inside-test=true")
        useJUnitPlatform()
        testLogging {
            events("passed", "skipped", "failed")
        }
    }
}

